# BreastCancerStudy

./: .gitignore  DATA_DESCRIPTION.md  NOTICE.md  ProjectDescription.docx  README.md  pyproject.toml
.ipynb_checkpoints/: EVALUATION_PROTOCOL-checkpoint.md  PROJECT_CHARTER-checkpoint.md  README-checkpoint.md
breastcancerstudy.egg-info/: PKG-INFO  SOURCES.txt
docs/: technical_report.md
runs/binary/lr/preds/: test.parquet  (+1 more)
scripts/: build_cohort.py  etl_build_processed.py  eval_survival_fairness_robustness.py  fit_and_apply_recalibrator.py  run_ablation_suite.py  run_baselines.py  run_external_validation.py  run_pipeline.py  run_survival_models.py  sanity_check_calibration.py
src/datasets/: load_cohort.py  registry.py
src/datasets/.ipynb_checkpoints/: registry-checkpoint.py
src/eval/: decision_curve.py  evaluate.py  recalibration.py  survival_eval.py  time_dependent.py
src/experiments/: ablation.py
src/fairness/: group_eval.py
src/features/: preprocess.py
src/harmonize/: genes.py
src/models/: baselines.py  survival.py
src/pipelines/: preprocessing.py  utils.py
src/plots/: risk_strata_km.py  standard_plots.py
src/robustness/: bootstrap.py
src/splits/: make_splits.py
tests/: conftest.py  test_ablation_missingness.py  test_assemble_cohort.py  test_evaluate.py  test_fixed_horizon_label.py  test_labeling.py  test_load_clinical.py  test_load_cna.py  test_load_expression.py  test_make_splits.py  test_preprocess_and_models.py  test_survival_eval_basic.py  test_survival_models_lifelines.py
tests/.ipynb_checkpoints/: conftest-checkpoint.py
(+3 files in other folders)
